--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "" # This will show up in places like twitter, linkedin, etc, if yo
 email: "rahul.quality.analyst@gmail.com"
 #twitter_username: "twitteruser"
 github_username: "rahul-singh-sdet"
-linkedin_username: "linkedin.com/in/rahul-singh-qa-automation-coding-enthusiast"
+linkedin_username: "Rahul Singh"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
